# quark

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  fuzz.yml
bench/: CMakeLists.txt
cmake/: benchmark.cmake  catch2.cmake  quarkConfig.cmake.in
docs/: DESIGN.md
fuzz/: CMakeLists.txt  hp_retire.cpp
include/lf/: arch.hpp  bench.hpp  config.hpp  error.hpp  log.hpp
include/quark/: arch.hpp  bench.hpp  error.hpp  hazard_ptr.hpp  log.hpp  quark.hpp  tagged_ptr.hpp
include/quark/container/: ms_queue.hpp  spsc_queue.hpp
include/quark/container/detail/: ring_storage.hpp
include/quark/core/: arch.hpp  config.hpp  error.hpp  types.hpp  version.hpp  version.hpp.in
include/quark/memory/: hazard_ptr.hpp  tagged_ptr.hpp
include/quark/util/: assert.hpp  backoff.hpp  bench.hpp  log.hpp
include/quark/util/detail/: move_only_function.hpp
tests/: CMakeLists.txt  expect_abort.cmake  test_backoff.cpp  test_memory_safety.cpp  test_move_only_function.cpp  test_ms_queue.cpp  test_spsc_queue.cpp  test_version.cpp
tests/abort/: destroy_with_handles.cpp
tests/install_smoke/: CMakeLists.txt  main.cpp
